# yolo26

./: .gitignore  CLAUDE.md  OFFICIAL_ULTRALYTICS_REFACTOR_LOG.md  README.md  best.pt  config.py  dataset.yaml  get_map.py  predict.py  requirements.txt  summary.py  train.py  voc_annotation.py  yolo.py
docs/superpowers/plans/: 2026-06-05-yolo26-official-training.md  2026-06-08-rgb-vegetation-metrics.md  2026-06-16-yolo26-custom-training-plan.md
docs/superpowers/specs/: 2026-06-05-yolo26-official-training-design.md  2026-06-08-rgb-vegetation-metrics-design.md  2026-06-16-yolo26-custom-training-design.md  2026-06-16-yolo26-official-ultralytics-design.md
model_data/: yolo26m-cls.pt  yolo26n-cls.pt  yolo26s-cls.pt  yolo26x-cls.pt
nets/: __init__.py  yolo.py  yolo_training.py
rust-inference/: Cargo.toml
rust-inference/.cargo/: config.toml
rust-inference/src/: main.rs  web.rs
scripts/: classify_images.py  classify_rgb_seedling_health.py  merge_supplement_dataset.py  prepare_yolo_dataset.py  rgb_vegetation_metrics.py  rgb_yolo_annotate.py  visualize_yolo_labels.py
tests/: test_helpers.py  test_predict_official.py  test_predict_runner.py  test_prepare_yolo_dataset.py  test_rgb_health_classification.py  test_rgb_vegetation_metrics.py  test_rgb_yolo_annotate.py  test_train.py  test_train_official.py
utils/: __init__.py  callbacks.py  predict_runner.py  training_plots.py  utils.py  utils_bbox.py  utils_fit.py  utils_map.py
